--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -2,17 +2,17 @@ $color-primary: #c155c5;
 $color-primary-light: #d56fd5cc;
 $color-primary-dark: #8c28b4cc;
 
-$color-primary: #55c57a;
-$color-primary-light: #7ed56f;
-$color-primary-dark: #28b485;
+// $color-primary: #55c57a;
+// $color-primary-light: #7ed56f;
+// $color-primary-dark: #28b485;
 
-$color-primary: #6255c5;
-$color-primary-light: #7d6fd5cc;
-$color-primary-dark: #3528b4cc;
+// $color-primary: #6255c5;
+// $color-primary-light: #7d6fd5cc;
+// $color-primary-dark: #3528b4cc;
 
-$color-primary: #c55555;
-$color-primary-light: #d56f6fcc;
-$color-primary-dark: #b42828cc;
+// $color-primary: #c55555;
+// $color-primary-light: #d56f6fcc;
+// $color-primary-dark: #b42828cc;
 
 $color-secondary-light: #ffb900;
 $color-secondary-dark: #ff7730;
