--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -58,43 +58,39 @@ body {
     }
   }
 }
-.heading-10 {
-  text-transform: uppercase;
-  font-size: $default-font-size;
-  font-weight: 700;
-}
+
+// .heading-secondary {
+//   font-size: 3rem;
+//   padding: 1rem 0;
+//   font-weight: 700;
+//   display: inline-block;
+//   letter-spacing: 0.5rem;
+//   text-transform: uppercase;
+//   background-image: linear-gradient(
+//     to right,
+//     $color-primary-dark,
+//     $color-primary-dark
+//   );
+//   -webkit-background-clip: text;
+//   background-clip: text;
+//   color: transparent;
+
+//   position: relative;
+//   transition: all 0.2s;
+
+//   &::after {
+//     content: "";
+//     display: inline-block;
+//     position: absolute;
+//     left: 0;
+//     bottom: 0;
+//     width: 35%;
+//     height: 0.4rem;
+//     background-color: $color-primary-dark;
+//   }
+// }
+
 .heading-secondary {
-  font-size: 3rem;
-  padding: 1rem 0;
-  font-weight: 700;
-  display: inline-block;
-  letter-spacing: 0.5rem;
-  text-transform: uppercase;
-  background-image: linear-gradient(
-    to right,
-    $color-primary-dark,
-    $color-primary-dark
-  );
-  -webkit-background-clip: text;
-  background-clip: text;
-  color: transparent;
-
-  position: relative;
-  transition: all 0.2s;
-
-  &::after {
-    content: "";
-    display: inline-block;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 35%;
-    height: 0.4rem;
-    background-color: $color-primary-dark;
-  }
-}
-
-.heading-tertiary {
   display: inline-block;
   font-size: 3.5rem;
   padding: 1rem 0;
@@ -124,7 +120,11 @@ body {
     text-shadow: 0 1rem 1.5rem rgba(0, 0, 0, 0.2);
   }
 }
-
+.heading-tertiary {
+  font-size: 1.6rem;
+  text-transform: uppercase;
+  font-weight: 700;
+}
 .paragraph {
   font-size: 1.6rem;
   text-align: justify;
@@ -132,3 +132,33 @@ body {
     font-size: 1.7rem;
   }
 }
+// .heading-secondary {
+//   font-size: 3rem;
+//   padding: 1rem 0;
+//   font-weight: 700;
+//   display: inline-block;
+//   letter-spacing: 0.5rem;
+//   text-transform: uppercase;
+//   background-image: linear-gradient(
+//     to right,
+//     $color-primary-dark,
+//     $color-primary-dark
+//   );
+//   -webkit-background-clip: text;
+//   background-clip: text;
+//   color: transparent;
+
+//   position: relative;
+//   transition: all 0.2s;
+
+//   &::after {
+//     content: "";
+//     display: inline-block;
+//     position: absolute;
+//     left: 0;
+//     bottom: 0;
+//     width: 35%;
+//     height: 0.4rem;
+//     background-color: $color-primary-dark;
+//   }
+// }
