--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,105 +1,7 @@
-.tour {
-  @include respond(tab-port) {
-    margin-bottom: 4rem;
-  }
-
-  &__details {
-    padding: 0 2rem 0 2rem;
-
-    background-image: linear-gradient(
-      45deg,
-      $color-primary-light 10%,
-      $color-primary-dark 100%
-    );
-    background-color: $color-primary-dark;
-    background-blend-mode: soft-light;
-    float: left;
-    width: 50%;
-    position: relative;
-    height: 40rem;
-    @include respond(tab-port) {
-      float: none;
-      width: 100%;
-    }
-  }
-  &__picture {
-    float: left;
-    width: 50%;
-    height: 40rem;
-    overflow: hidden;
-    position: relative;
-    transition: all 0.2s;
-    @include respond(tab-port) {
-      float: none;
-      width: 100%;
-    }
-
-    &::after {
-      content: "";
-      display: block;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-image: linear-gradient(
-        to right,
-        $color-primary-dark,
-        $color-primary-dark
-      );
-      background-color: $color-primary;
-      background-blend-mode: screen;
-      opacity: 0;
-      visibility: hidden;
-      transition: all 0.2s;
-    }
-    &--img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      transition: all 0.4s ease-in;
-    }
-  }
-  &:hover &__picture::after {
-    opacity: 0.2;
-    visibility: visible;
-  }
-  &:hover &__picture--img {
-    transform: scale(1.1);
-    @include respond(phone) {
-      transform: scale(1);
-    }
-  }
-
-  &__heading {
-    padding: 5rem 0 0 0;
-    font-size: 2.8rem;
-    font-weight: 700;
-    width: 45%;
-    text-transform: uppercase;
-    color: $color-light-white;
-
-    &-span {
-      padding: 1rem 1.5rem;
-      -webkit-box-decoration-break: clone;
-      box-decoration-break: clone;
-
-      &--1 {
-        background-image: linear-gradient(
-          to right bottom,
-          rgba($color-secondary-light, 0.7),
-          rgba($color-secondary-light, 0.7)
-        );
-      }
-    }
-    @include respond(phone) {
-      font-size: 2.5rem;
-    }
-  }
-}
-//
 .card {
-  // functionality
+  /***************************
+   Card Functionality
+  ***************************/
   perspective: 150rem;
   -moz-perspective: 150rem;
   position: relative;
@@ -153,7 +55,9 @@
     transform: rotateY(0);
   }
 
-  // card front styling
+  /***************************
+    card forepart styling
+  ***************************/
 
   &__image {
     background-size: cover;
@@ -208,17 +112,11 @@
 
     &--1 {
       color: $color-deep;
-      // background-image: linear-gradient(
-      //   to right bottom,
-      //   rgba($color-secondary-dark, 0.85),
-      //   rgba($color-secondary-dark, 0.85)
-      // );
-      // background-image: linear-gradient(
-      //   to right bottom,
-      //   rgba($color-white, 0.6),
-      //   rgba($color-white, 0.6)
-      // );
-      background: rgba(156, 184, 248, 0.571);
+      background-image: linear-gradient(
+        to right bottom,
+        rgba($color-secondary-dark, 0.85),
+        rgba($color-secondary-dark, 0.85)
+      );
     }
     &--2 {
       background-image: linear-gradient(
@@ -253,8 +151,9 @@
       }
     }
   }
-
-  // card back styling
+  /***************************
+   card afterwards styling
+  ***************************/
 
   &__cta {
     position: absolute;
@@ -277,7 +176,8 @@
     font-size: 6rem;
     font-weight: 100;
   }
-
+  //**************** Responsiveness Start *******************//
+  // (max-width) 900px ==> 56.25em
   @include respond(tab-port) {
     height: auto;
     background-color: $color-light-white;
@@ -302,8 +202,9 @@
     &__details {
       padding: 1rem 3rem;
     }
-
-    // card back styling
+    /***************************
+     card afterwards styling
+    ***************************/
 
     &__cta {
       position: relative;
