--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,6 +14,7 @@
 @import "components/services";
 @import "components/talkingbox";
 @import "components/testimonial";
+@import "components/tours";
 
 @import "layout/footer";
 @import "layout/grid";
