--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -6,13 +6,13 @@
   }
   &__button {
     display: block;
-    width: 5.5rem;
-    height: 5.3rem;
-    border-radius: 0.1rem;
+    width: 7rem;
+    height: 7rem;
+    border-radius: 10rem;
     position: fixed;
     top: 4rem;
     right: 4rem;
-    background-color: $color-secondary-dark;
+    background-color: $color-dark-white;
     box-shadow: 0 1rem 1.5rem rgba($color-deep, 0.2);
     cursor: pointer;
     z-index: 2000;
@@ -20,8 +20,8 @@
   }
   &__background {
     display: block;
-    height: 5rem;
-    width: 5rem;
+    height: 6rem;
+    width: 6rem;
     position: fixed;
     top: 4rem;
     right: 4rem;
@@ -35,7 +35,7 @@
     transition: transform 0.9s cubic-bezier(0.86, 0, 0.07, 1);
   }
   &__icon {
-    margin-top: 2.5rem;
+    margin-top: 3.5rem;
     position: relative;
     &,
     &::before,
