--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,10 +10,11 @@
 @import "components/button";
 @import "components/card";
 @import "components/composition";
+@import "components/experiences";
 @import "components/form";
 @import "components/services";
 @import "components/talkingbox";
-@import "components/testimonial";
+@import "components/testimonials";
 @import "components/tours";
 
 @import "layout/footer";
