--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -14,8 +14,8 @@
   @include respond(tab-port) {
     font-size: 50%;
   }
-  @include respond(phone) {
-    font-size: 36%;
+  @include respond(small-phone) {
+    font-size: 37%;
   }
   @include respond(large-desktop) {
     font-size: 75%;
