--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -3,13 +3,12 @@
   &:visited {
     display: inline-block;
     text-decoration: none;
-    font-size: 1.4rem;
-    letter-spacing: 0.1rem;
+    font-size: 1.6rem;
     padding: 1.5rem 4rem;
     border: none;
     border-radius: 10rem;
     text-transform: uppercase;
-    font-weight: 700;
+    font-weight: 600;
     position: relative;
     transition: all 0.6s;
   }
@@ -44,7 +43,7 @@
 
   &--white {
     background-color: $color-white;
-    color: $color-grey-dark-3;
+    color: $color-grey-dark;
 
     &::after {
       content: "";
@@ -180,7 +179,7 @@
       margin-left: 0;
       font-size: 1.4rem;
       padding: 1.5rem;
-      display: block;
+      // display: block;
     }
   }
 
