--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,13 +3,13 @@
   height: 95vh;
   background-image: linear-gradient(
       to right,
-      rgba($color-primary, 0.7),
-      rgba($color-primary-light, 0.7)
+      rgba($color-primary, 0.8),
+      rgba($color-primary-dark, 0.8)
     ),
-    url(../img/bg20.jpg);
+    url(../img/bg1.jpg);
   background-size: cover;
   background-position: bottom;
-  // background-attachment: fixed;
+  background-attachment: fixed;
   clip-path: polygon(0 0, 100% 0, 100% 80vh, 0 100%);
 
   @include respond(phone) {
